add entity configuration

--- a/Shop.API/appsettings.json
+++ b/Shop.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=belajar;User ID=dbfa;Password=ikan123;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
