--- a/Shop.API/appsettings.json
+++ b/Shop.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+    "Issuer": "http://localhost:5100",
+    "Audience": "http://localhost:5100",
+    "AccessTokenExpirationMinutes": 30,
+    "RefreshTokenExpirationDays": 7
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=belajar;User ID=dbfa;Password=ikan123;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
