--- a/Shop.API/Shop.API.csproj
+++ b/Shop.API/Shop.API.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Auth\Shop.Auth.csproj" />
     <ProjectReference Include="..\Shop.Application\Shop.Application.csproj" />
+    <ProjectReference Include="..\Shop.Auth\Shop.Auth.csproj" />
     <ProjectReference Include="..\Shop.Common\Shop.Common.csproj" />
     <ProjectReference Include="..\Shop.Data\Shop.Data.csproj" />
   </ItemGroup>
